fix spinner being too big on mobile

--- a/app/assets/styles/base.css
+++ b/app/assets/styles/base.css
@@ -37,7 +37,10 @@
     left: 50%;
     z-index: 6;
     transform: translate(-50%, -50%);
-    width: 300px;
+  }
+
+  .spinner.float-center img {
+    height: 200px;
   }
 
   .to-reveal {
